<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:id="@+id/sd123"
    android:layout_marginBottom="70dp"
    android:background="@color/white">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="274dp"
        android:layout_height="279dp"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047">

        <ImageView
            android:id="@+id/imageView488"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/shop1png"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView388"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:text="@string/levis_s"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView588"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_women_t_shirt"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView388"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView388"
        app:layout_constraintTop_toBottomOf="@+id/textView388"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_1050"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView588"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/textView388"
        app:layout_constraintTop_toTopOf="@+id/textView388"
        app:layout_constraintVertical_bias="0.368" />



</androidx.constraintlayout.widget.ConstraintLayout>